edited Readme file, add Component.ts, edited constants, added types

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -210,7 +210,7 @@
 	</template>
 
 	<template id="order">
-		<form class="form" name="order">
+		<form class="form" name="details">
 			<div class="order">
 				<div class="order__field">
 					<h2 class="modal__title">Способ оплаты</h2>
